# IFENet

./: .gitignore  .pypirc  IFENet_Telco.ipynb  LICENSE  README.md  encoder.py  optuna_test.py  pyproject.toml  tabnet.ipynb  test.py
.ipynb_checkpoints/: IFENet_CoverType-checkpoint.ipynb  IFENet_CoverType-checkpoint.py  IFENet_Sarcos-checkpoint.ipynb  IFENet_Telco-checkpoint.ipynb  __init__-checkpoint.py  ife-checkpoint.py  ifenet_covertype_optuna-checkpoint.py  ifenet_sarcos_optuna-checkpoint.py  ifenet_telco_optuna-checkpoint.py  tabnet-checkpoint.ipynb
Backup/: IterativeFeatureExclusion.py  IterativeFeatureExclusion.py.bak1  IterativeFeatureExclusion.py.bak2
Backup/.ipynb_checkpoints/: ifenet_covertype.py-checkpoint.bak
adult/: Create Inputs.ipynb  IFENet_Adult.ipynb  adult.data
adult/.ipynb_checkpoints/: Create Inputs-checkpoint.ipynb  IFENet_Adult-checkpoint.ipynb  encoder-checkpoint.py
adult/checkpoints/: ifeNet_adult.h5  weights.hdf5
adult/saved_model/: .index
checkpoints/: .index  ifeNet_cover.h5  ifeNet_cover.weights.h5  ifeNet_sarcos.h5  ifeNet_telco.weights.h5
covertype/: ifenet_covertype_optuna.py
covertype/.ipynb_checkpoints/: IFENet_CoverType-checkpoint.ipynb
covertype/checkpoints/: ifeNet_cover.h5
examples/: ifenet_heloc.py
examples/.ipynb_checkpoints/: ifenet_heloc-checkpoint.py
examples/adult/: IFENet_Adult.ipynb  (+3 more)
heloc/: IFENet_Heloc.ipynb  script_att.sh
sarcos/: IFENet_Sarcos.ipynb  sarcos_inv_test.csv
saved_model/: ifeNet_cover.h5  ifeNet_sarcos.h5
tf_ifenet/: __init__.py  config.py  model.py  models.py  utility.py
(+89 files in other folders)
